--- a/Autoencoder models/Glioma Cancer/Description
+++ b/Autoencoder models/Glioma Cancer/Description
@@ -1,1 +1,6 @@
-The specific SCNV files used to build AE models is the csv file with 256 dimensions as the Model built on top of the 256 dimensions have shown the best performance compared with the other dimensions of the SCNV datasets.
+### This folder contains the architecture of Autoencoder models for each single omics from Glioma cancer.
+
+The architecture for MIRNA is included in the jupyter notebook in Breast Invasive Cancer
+
+The specific SCNV files used to build AE models is the csv file with 256 dimensions,
+as the Model built on top of the 256 dimensions have shown the best performance compared with the other dimensions of the SCNV datasets.
